# ai-engineer-test-task

./: .env.example  .gitignore  Architecture.md  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
data/: mock_hotel_data.json
src/hotel_agent/: __init__.py  app_streamlit.py  cli.py  config.py  history.py  service.py
src/hotel_agent/graph/: build.py  nodes.py  state.py
src/hotel_agent/llm/: providers.py
src/hotel_agent/policy/: guardrails.py
src/hotel_agent/prompts/: __init__.py  parser.md  planner.md
src/hotel_agent/tools/: mailer.py  pms.py  read_tools.py  workflows.py
test-questions/: README.md  test_questions.json
tests/: conftest.py  test_guardrails.py  test_pms.py  test_scenario_1_lookup.py  test_scenario_2_booking.py  test_scenario_3_risky.py  test_workflows.py
