[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-agent"
version = "0.1.0"
description = "AI email agent for hotel guest emails (Grand Oslo Hotel) — LangGraph Plan→Approve→Execute."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "python-dotenv>=1.0",
    "pydantic>=2",
]

[project.optional-dependencies]
ui = ["streamlit>=1.40"]
dev = ["pytest>=7"]

[project.scripts]
hotel-agent = "hotel_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
